Add unit test to Get Articles Use Case for exceptions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CleanProposal</string>
+    <string name="error_server_unavailable">Please try later</string>
 </resources>
